# reactpy-select

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  __main__.py  counter.py  pyproject copy.toml  pyproject.toml  pyproject.toml.bak  usage.py
examples/: dash_dropdown_example.py  dash_ticker_example.py  multi_select_example.py  runner.py  simple.py  simple_styles.py  simple_theme.py
examples/assets/css/: react_select.css
js/: index.html  package-lock.json  package.json  rollup.config.js  vite.config.js
js/src/: index.js
js/src/demo/: App.jsx  MultiSelectExample.jsx  main.jsx
js/src/fragments/: Dropdown.react.js  Dropdown.react.jsx  ExampleCounter.react.jsx  Select.react.jsx
reactpy_select/: __init__.py  bundle.py  bundle_wrapper.py  component_wrapper.py  counter.py  dropdown.py  select.py
src/js/: package-lock.json  package.json  package.json.bak  tsconfig.json
src/js/src/demo/: DashDropdownExample.jsx
src/reactpy_select/: __init__.py  bundle.dev.js  bundle.min.js  bundle_wrapper.py  select.py
src/reactpy_select/static/: bundle.js
tests/: conftest.py  test_counter.py  test_dropdown.py  test_example.py  test_example_dropdown.py  test_parameters.py  test_simple.py
tests/examples/: test_simple.py
tests/tooling/: __init__.py  page_containers.py  playwright_helpers.py  pytest_playwright_visual.py  wait_stable.py
utils/: app_runner.py  fast_server.py
utils/server_options/: __init__.py  server_options.py
