[tool.poetry]
name = "reactpy-select"
version = "0.0.2"
description = ""
authors = ["Steve Jones <jonesst2608@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/stevej2608/reactpy-select/README.md"
repository = "https://github.com/stevej2608/reactpy-select"
packages = [{include = "reactpy_select", from="src"}]
include = ["reactpy_select/bundle.min.js", "reactpy_select/bundle.dev.js"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
reactpy = "^1.0.2"

[tool.poetry.group.dev.dependencies]
colorlover = "^0.3.0"
fastapi = "^0.109.0"
pandas = "1.4.2"
playwright = "1.41.1"
pydantic = "^2.5.3"
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
starlette = ">=0.13.6"
trio = "^0.24.0"
twine = "^4.0.2"
uvicorn = {extras = ["standard"], version = ">=0.19.0"}
plotly = "^5.19.0"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff

line-length = 120
[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeStubs = false


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = "tests"

log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::trio.TrioDeprecationWarning"
]
addopts = "-rsxX -vv"
# asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
