[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-build-scripts"]

##############################
# >>> Hatch Build Config <<< #
##############################

[project]
name = "reactpy-select"
description = "ReactPy Select component"
readme = "README.md"
keywords = ["React", "ReactJS", "ReactPy", "components"]
license = "MIT"
authors = [{ name = "Steve Jones", email = "jonesst2608@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["reactpy==2.0.0b7"]
dynamic = ["version"]
urls.Homepage = "https://github.com/stevej2608/reactpy-select"
urls.Source = "https://github.com/stevej2608/reactpy-select"

[tool.hatch.version]
path = "src/reactpy_select/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/examples", "/utils"]
artifacts = ["/src/reactpy_select/static/"]

[tool.hatch.build.targets.wheel]
packages = ["src/reactpy_select"]
artifacts = ["/src/reactpy_select/static/"]

[tool.hatch.metadata]
license-files = { paths = ["LICENSE"] }

[tool.hatch.envs.default]
installer = "uv"

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
  "bun install --cwd src/js",
  "bun build src/js/src/index.js --outfile src/reactpy_select/static/bundle.js --target=browser --format=esm --no-minify",
]
artifacts = []

#############################
# >>> Hatch Test Runner <<< #
#############################

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "asgi-tools",
  "asgiref",
  "colorlover>=0.3.0",
  "exceptiongroup",
  "fastapi",
  "jsonpointer",
  "orjson",
  "pandas",
  "playwright",
  "plotly",
  "pydantic>=2.5.3",
  "pyright",
  "pytest-asyncio",
  "pytest-sugar",
  "responses",
  "servestatic",
  "uvicorn[standard]",
]
randomize = true
matrix-name-format = "{variable}-{value}"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13"]

[tool.pytest.ini_options]
testpaths = "tests"
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

################################
# >>> Hatch Python Scripts <<< #
################################

[tool.hatch.envs.python]
extra-dependencies = ["pyright"]

[tool.hatch.envs.python.scripts]
type_check = ["pyright reactpy_select"]

[tool.hatch.envs.javascript]
detached = true

[tool.hatch.envs.javascript.scripts]
check = ['bun install --cwd "src/js"', 'bun run --cwd "src/js" check']
fix = ['bun install --cwd "src/js"', 'bun run --cwd "src/js" format']

#########################
# >>> Generic Tools <<< #
#########################

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
# https://marketplace.visualstudio.com/items?itemName=charliermarsh.ruff
line-length = 120

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-pyprojecttoml-file
typeCheckingMode = "strict"
pythonVersion = "3.11"
reportMissingTypeStubs = false
ignore = ["tmp", "tmp/**", "**/tmp/**"]
